# custom-kafka-exporter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yaml
.local/: kafka-init.sh  wait-for-kafka-setup.sh
app/: __init__.py  __main__.py  config.py  kafka_client.py  log_helper.py  main.py  metrics.py
charts/kafka-topic-freshness-exporter/: Chart.yaml  values.yaml
charts/kafka-topic-freshness-exporter/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
tests/: conftest.py  test_main.py
